// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`check > summaryMarkdownTable > should transform an annotations summary to a markdown table 1`] = `
"|Type|Found|
|-|-|
|Exports|123|
|Types|456|
|Class Members|789|
|Enum Members|101112|
|Duplicates|131415|"
`;

exports[`check > summaryMarkdownTable > should transform an annotations summary to a markdown table 2`] = `
"|Type|Found|
|-|-|
|Exports|131415|
|Types|161718|
|Class Members|192021|
|Enum Members|222324|
|Duplicates|252627|"
`;

exports[`check > updateCheckAnnotations > should only make three requests with 150 annotations 1`] = `
[
  [
    0,
    "in_progress",
    {
      "annotations": [
        {
          "annotation_level": "failure",
          "end_column": 4,
          "end_line": 0,
          "message": "'Var0' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 4,
          "end_line": 0,
          "message": "'Var1' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 4,
          "end_line": 0,
          "message": "'Var2' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 4,
          "end_line": 0,
          "message": "'Var3' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 4,
          "end_line": 0,
          "message": "'Var4' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 4,
          "end_line": 0,
          "message": "'Var5' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 4,
          "end_line": 0,
          "message": "'Var6' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 4,
          "end_line": 0,
          "message": "'Var7' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 4,
          "end_line": 0,
          "message": "'Var8' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 4,
          "end_line": 0,
          "message": "'Var9' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var10' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var11' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var12' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var13' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var14' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var15' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var16' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var17' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var18' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var19' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var20' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var21' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var22' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var23' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var24' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var25' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var26' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var27' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var28' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var29' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var30' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var31' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var32' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var33' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var34' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var35' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var36' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var37' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var38' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var39' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var40' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var41' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var42' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var43' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var44' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var45' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var46' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var47' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var48' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var49' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
      ],
      "summary": "",
      "title": "Knip reporter analysis",
    },
  ],
  [
    0,
    "in_progress",
    {
      "annotations": [
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var50' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var51' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var52' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var53' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var54' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var55' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var56' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var57' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var58' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var59' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var60' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var61' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var62' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var63' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var64' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var65' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var66' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var67' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var68' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var69' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var70' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var71' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var72' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var73' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var74' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var75' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var76' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var77' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var78' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var79' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var80' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var81' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var82' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var83' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var84' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var85' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var86' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var87' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var88' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var89' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var90' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var91' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var92' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var93' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var94' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var95' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var96' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var97' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var98' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 5,
          "end_line": 0,
          "message": "'Var99' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
      ],
      "summary": "",
      "title": "Knip reporter analysis",
    },
  ],
  [
    0,
    "in_progress",
    {
      "annotations": [
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var100' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var101' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var102' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var103' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var104' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var105' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var106' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var107' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var108' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var109' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var110' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var111' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var112' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var113' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var114' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var115' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var116' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var117' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var118' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var119' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var120' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var121' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var122' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var123' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var124' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var125' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var126' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var127' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var128' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var129' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var130' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var131' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var132' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var133' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var134' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var135' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var136' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var137' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var138' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var139' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var140' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var141' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var142' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var143' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var144' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var145' is an unused export",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var146' is an unused type",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var147' is a duplicate of 'Var2'",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var148' is an unused class member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
        {
          "annotation_level": "failure",
          "end_column": 6,
          "end_line": 0,
          "message": "'Var149' is an unused enum member",
          "path": "some/path",
          "start_column": 0,
          "start_line": 0,
        },
      ],
      "summary": "",
      "title": "Knip reporter analysis",
    },
  ],
]
`;

exports[`check > updateCheckAnnotations > should skip undefined or null ItemMeta entries 1`] = `
[
  0,
  "in_progress",
  {
    "annotations": [
      {
        "annotation_level": "failure",
        "end_column": 3,
        "end_line": 0,
        "message": "'Var' is an unused class member",
        "path": "some/path",
        "start_column": 0,
        "start_line": 0,
      },
    ],
    "summary": "",
    "title": "Knip reporter analysis",
  },
]
`;

exports[`check > updateCheckAnnotations > should transform a duplicate ItemMeta to a valid annotation 1`] = `
[
  {
    "annotation_level": "failure",
    "end_column": 3,
    "end_line": 0,
    "message": "'Var' is a duplicate",
    "path": "some/path",
    "start_column": 0,
    "start_line": 0,
  },
  {
    "annotation_level": "failure",
    "end_column": 4,
    "end_line": 0,
    "message": "'Var2' is a duplicate of 'Var3'",
    "path": "some/path",
    "start_column": 0,
    "start_line": 0,
  },
  {
    "annotation_level": "failure",
    "end_column": 4,
    "end_line": 0,
    "message": "'Var4' is a duplicate of 'Var5' and 'Var6'",
    "path": "some/path",
    "start_column": 0,
    "start_line": 0,
  },
  {
    "annotation_level": "failure",
    "end_column": 4,
    "end_line": 0,
    "message": "'Var7' is a duplicate of 'Var8', 'Var9' and 'Var10'",
    "path": "some/path",
    "start_column": 0,
    "start_line": 0,
  },
]
`;

exports[`check > updateCheckAnnotations > should transform a minimal ItemMeta to a valid annotation 1`] = `
[
  {
    "annotation_level": "failure",
    "end_column": 3,
    "end_line": 0,
    "message": "'Var' is an unused class member",
    "path": "some/path",
    "start_column": 0,
    "start_line": 0,
  },
]
`;
